feature/9 - Created basic header design. Implemented navigation service with dropdown and mobile menu.

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -5,6 +5,9 @@
 */
 $path-images: '/assets/images/';
 
+$icomoon-font-family: "icomoon" !default;
+$icomoon-font-path: "/assets/fonts" !default;
+
 /**
  * Custom
 */
