--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,17 @@
 @import 'abstracts';
 
+@import 'vendor/icons';
+
+@import 'components/menu-icon';
+
+@import 'layout/breakpoints';
+
 @import 'base/reset';
 @import 'base/global-overrides';
 @import 'base/font-faces';
 @import 'base/base';
+
+@import 'themes/default-theme';
+
+
+
