feature/9 - Added couple of test, refactored index files. Setup the karma config.

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,11 +1,9 @@
 <header class="header">
   <div class="container">
     <div class="header__wrapper split">
-      <div class="header__brand">
-        <a [routerLink]="['/']">
-          <img height="40" src="assets/images/angular_white.svg">
-        </a>
-      </div>
+      <a [routerLink]="['/']" class="header__brand">
+        <img height="40" src="assets/images/angular_white.svg">
+      </a>
       <nav class="header__navigation" [ngClass]="{ 'is-opened': showNavigation }">
         <ul #navigation class="navigation">
           <li class="navigation__item"
