feature/9 - Added home component and implemented the footer with navigation items.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<!--  TODO: Add hide navigation layout -->
 <app-header></app-header>
+<router-outlet></router-outlet>
+<!--  TODO: Add hide footer layout -->
+<app-footer></app-footer>
