--- a/src/styles/themes/_default-theme.scss
+++ b/src/styles/themes/_default-theme.scss
@@ -1,5 +1,5 @@
 body.default-theme {
-  --primary-color: #fc6b00;
+  --primary-color: #9147ff;
   --primary-active-color: #ef6600;
   --secondary-color: #cccccc;
 
@@ -23,6 +23,7 @@ body.default-theme {
   --highlight-alt-color-4: #ebedef;
 
   --lightest: #ffffff;
+  --lightest-color: 255, 255, 255;
   --darkest: #000000;
   --darkest-color: 0, 0, 0;
 }
