feature/16 - Integrated blog post list page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--  TODO: Add hide navigation layout -->
 <app-header></app-header>
-<app-swiper></app-swiper>
+<!--<app-swiper></app-swiper>-->
 <router-outlet></router-outlet>
 <!--  TODO: Add hide footer layout -->
 <app-footer></app-footer>
