--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="footer__wrapper">
       <div class="footer__about">
-        <a [routerLink]="['/']" class="header__brand">
-          <img height="80" src="assets/images/angular_white.svg" loading="lazy" />
+        <a [routerLink]="['/']" class="header__brand" aria-label="Project Anchor logo">
+          <img height="80" width="80" src="assets/images/angular_white.svg" loading="lazy" alt="Project Anchor logo"/>
         </a>
         <p>
           It is a long established fact that a reader will be distracted by the readable content of a page when looking
