feature/16 - Integrated Store to the posts

--- a/src/app/blog/components/blog-page/blog-page.component.html
+++ b/src/app/blog/components/blog-page/blog-page.component.html
@@ -1,5 +1,5 @@
 <main>
   <div class="container">
-    <app-all-blog-post></app-all-blog-post>
+    <app-blog-post-list [blogPosts]="blogPosts"></app-blog-post-list>
   </div>
 </main>
