--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$project-anchor-primary: mat.define-palette(mat.$indigo-palette);
+$project-anchor-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$project-anchor-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$project-anchor-theme: mat.define-light-theme((
+  color: (
+    primary: $project-anchor-primary,
+    accent: $project-anchor-accent,
+    warn: $project-anchor-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($project-anchor-theme);
+
 @import 'abstracts';
 
 @import 'vendor/icons';
@@ -13,5 +48,10 @@
 
 @import 'themes/default-theme';
 
+@import 'utilities/text';
 @import 'utilities/split';
+@import 'utilities/divider';
 @import "swiper/swiper.min.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
